Fixed overflow issue.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -228,7 +228,7 @@ h3 {
 }
 
 #tableContainer {
-    overflow-x: auto;
+    overflow-x: scroll;
 }
 
 #members table {
@@ -236,10 +236,6 @@ h3 {
     padding-left: 50px;
     padding-right: 50px;
     margin: 0px auto;
-}
-
-#tableSub {
-    display: none;
 }
 
 td {
